--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header Bar - Top -->
     <header class="header-bar">
         <div class="header-left">
-            <h1 class="header-name">Noah Fabricius</h1>
+            <h1 class="header-name">Fanny Maj Riisager</h1>
             <p class="header-subtitle">HA(it), CBS</p>
         </div>
         <div class="header-right">
