--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noah Fabricius - CV & Portfolio</title>
+    <title>Fanny Maj Riisager - CV & Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,13 +11,13 @@
     <header class="header-bar">
         <div class="header-left">
             <h1 class="header-name">Fanny Maj Riisager</h1>
-            <p class="header-subtitle">HA(it), CBS</p>
+            <p class="header-subtitle">Multimediedesign, Erhvervsakademi København</p>
         </div>
         <div class="header-right">
             <div class="contact-info" id="contact-info-trigger">
-                <span><a href="mailto:Noahnfdn@gmail.com">Noahnfdn@gmail.com</a></span>
-                <span><a href="tel:+4561515654">+45 61515654</a></span>
-                <span>Valby Langgade 36, 2500 Valby</span>
+                <span><a href="fannymajriisager@gmail.com">fannymajriisager@gmail.com</a></span>
+                <span><a href="tel:+20810187">+45 20810187</a></span>
+                <span>Frejasgade 11, 2200 København N</span>
             </div>
         </div>
     </header>
