--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                 <video src="projects.mp4" class="profile-video-inline" id="projects-video-inline" muted playsinline></video>
             </div>
             <div class="proximity-hint" id="proximity-hint" data-da="fortsæt i den retning" data-en="keep going in that direction"></div>
-            <p data-da="Jeg er HA(it)-studerende med stærke programmeringsfærdigheder." data-en="I am a Business Administration and Information Technology student with strong programming skills."></p>
-            <p data-da="Min passion ligger i samspillet mellem mennesker og systemer. Jeg brænder for at forstå begge sider og udvikle løsninger, der gør processer mere intuitive, effektive og harmoniske." data-en="My passion lies in the interplay between people and systems. I am driven to understand both sides and develop solutions that make processes more intuitive, efficient, and harmonious."></p>
+            <p data-da="Jeg er multimediedesignstuderende, og jeg brænder for at skabe digitale oplevelser, der både er intuitive og æstetiske" data-en="I’m a Multimedia Design student with a passion for creating digital experiences that are both intuitive and visually engaging."></p>
         </div>
 
         <!-- Uddannelse View -->
