--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <video src="projects.mp4" class="profile-video-inline" id="projects-video-inline" muted playsinline></video>
             </div>
             <div class="proximity-hint" id="proximity-hint" data-da="fortsæt i den retning" data-en="keep going in that direction"></div>
-            <p data-da="Jeg er multimediedesignstuderende, og jeg brænder for at skabe digitale oplevelser, der både er intuitive og æstetiske" data-en="I’m a Multimedia Design student with a passion for creating digital experiences that are both intuitive and visually engaging."></p>
+            <p data-da="Jeg er multimediedesignstuderende, og jeg brænder for at skabe digitale oplevelser, der både er intuitive og æstetiske." data-en="I’m a Multimedia Design student with a passion for creating digital experiences that are both intuitive and visually engaging."></p>
         </div>
 
         <!-- Uddannelse View -->
