--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
         <div class="content-view hidden" id="projekter-view">
             <div class="mobile-header">
                 <div class="mobile-profile-container">
-                    <img src="me.jpg" alt="Noah Fabricius" class="mobile-profile-image" id="mobile-profile-image-projekter">
+                    <img src="me.jpg" alt="Fanny Maj Riisager" class="mobile-profile-image" id="mobile-profile-image-projekter">
                     <video src="projects.mp4" class="mobile-profile-video" id="mobile-profile-video-projekter" muted playsinline></video>
                 </div>
                 <div class="mobile-contact-info">
-                    <span><a href="mailto:Noahnfdn@gmail.com">Noahnfdn@gmail.com</a></span>
-                    <span><a href="tel:+4561515654">+45 61515654</a></span>
-                    <span>Valby Langgade 36, 2500 Valby</span>
+                    <span><a href="mailto:fannymajriisager@gmail.com">fannymajriisager@gmail.com</a></span>
+                    <span><a href="tel:+4520810187">+45 20810187</a></span>
+                    <span>Frejasgade 11, 2200 København N</span>
                 </div>
             </div>
             <div class="content-container">
