--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="content-view hidden" id="erfaring-view">
             <div class="mobile-header">
                 <div class="mobile-profile-container">
-                    <img src="me.jpg" alt="Noah Fabricius" class="mobile-profile-image" id="mobile-profile-image-erfaring">
+                    <img src="me.jpg" alt="Fanny Maj Riisager" class="mobile-profile-image" id="mobile-profile-image-erfaring">
                     <video src="worker.mp4" class="mobile-profile-video" id="mobile-profile-video-erfaring" muted playsinline></video>
                 </div>
                 <div class="mobile-contact-info">
