--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
 
         <!-- Erhvervserfaring View -->
-        <div class="content-view hidden" id="erfaring-view">
+        <div class="content-view" id="erfaring-view">
             <div class="mobile-header">
                 <div class="mobile-profile-container">
                     <img src="me.jpg" alt="Fanny Maj Riisager" class="mobile-profile-image" id="mobile-profile-image-erfaring">
