Add deploy test comment in index.html

--- a/index.html
+++ b/index.html
@@ -167,5 +167,6 @@
     <button class="language-toggle" id="language-toggle">EN</button>
 
     <script src="script.js"></script>
+    <!-- deploy test -->
 </body>
 </html>
