Update image source path for Planet Nusa project

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                    data-en="Exam project with Planet Nusa, where I developed a community site and contributed social media content ideas."></p>
             
                 <!-- BILLEDE AF PROJEKTET -->
-                <img src="planetnusa.jpg" alt="Planet Nusa project" class="project-image">
+                <img src="../cv-fanny/planetnusa.jpg" alt="Planet Nusa project" class="project-image">
             </div>
 
 
